# document-uploader

./: .gitignore  README.md  flake.nix
backend/: .env_sample  Cargo.toml
backend/.sqlx/: query-49591a49a562d1534bc8c92d945c08e7f70d6c8b6a5ae0163eeaf3a747e2b959.json  query-73d32e02498b2646a0861748181d7b199e05d26ad03a693ca140b40b3c957da6.json  query-7aa73c0f118ef13cf84514f336d256b68f64727c3ec6bbb8feaf52db00856038.json  query-9db6583ed31978c2b15874208e65c7bd068f4142c47e8df9714f38359dbd7f26.json  query-a808e8247035bc11fbc6580b6876dbc62f51d9b64a961d8c41e515a9117c8f22.json  query-bf4640fb5c9a039d76b19d88334f328a9343d69cbdf039fcffe3edf45b4ba36f.json  query-cd9e1ec78e1272ffaff0114de548c29fdb7e1de2563028abd69eb4408717fbc1.json  query-ea7bfa2e4f332d797a3bb2b7eca0ee359007f6e744b36cabc2f826e054e12bb1.json  query-f90309c2fc072d2d605ce639969726a40a585e6062fa42d4f69eec70844ca66c.json
backend/migrations/: 0001_init.sql  20260707063206_init_schema.sql
backend/src/: domain.rs  main.rs  repository.rs
backend/src/domain/: document.rs  faculty.rs  major.rs  mod.rs  subject.rs  teacher.rs
backend/src/endpoint/: alive.rs  docs.rs  docs_id.rs  faculties.rs  mod.rs  subjects.rs
backend/src/endpoint/dto/: faculty.rs  major.rs  mod.rs  subject.rs
backend/src/infrastructure/: mod.rs  postgresql.rs  repository.rs  sqlite_repository.rs
backend/src/interface/: repository.rs
backend/src/usecase/: mod.rs  repository.rs
backend/src/usecase/app/: get_faculties.rs  get_subjects.rs  get_zip_document.rs  mod.rs  store_document.rs
backend/src/web/: mod.rs
frontend/: .gitignore  README.md  (+7 more)
(+48 files in other folders)
