[package]
name = "uploader-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
sqlx = {version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid", "macros", "migrate"]} 
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
